[package]
name = "subkey"
version = "0.1.0"
authors = ["sid-85 <chaogaofeng@xuketech.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hex = "1.0"
derive_more = { version = "0.99.2" }
rpassword = "4.0.1"
clap = "2.33.0"
hex = "0.4.2"
hex-literal = "0.2.1"
rand = "0.7.3"
rand_core = "0.5.1"
regex = "1.3.7"
zeroize = "0.9.1"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.52"
base58 = "0.1.0"
tiny-bip39 = "0.7.3"
lazy_static = "1.2.0"
sha2 = "0.8.1"
byteorder = "1.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
blake2-rfc = "0.2.18"
twox-hash = "1.5.0"
libsecp256k1 = "0.3.5"
ed25519-dalek = "1.0.0-pre.3"
schnorrkel = { version= "0.9.1",  features = ["preaudit_deprecated"]}
parity-scale-codec = {version="1.3.0", features = ["derive"]}
smallvec = "1.4.0"
parity-crypto = "0.3.1"
jsonrpc-http-server = "14.1"